tests/neg/missing-implicit1.check
-- Error: tests/neg/missing-implicit1.scala:16:4 -----------------------------------------------------------------------
16 |  ff // error
   |    ^
   |no implicit argument of type testObjectInstance.Zip[Option] was found for parameter xs of method ff in object testObjectInstance
   |
   |The following import might fix the problem:
   |
   |  import testObjectInstance.instances.zipOption
   |         
-- [E008] Member Not Found Error: tests/neg/missing-implicit1.scala:18:16 ----------------------------------------------
18 |  List(1, 2, 3).traverse(x => Option(x)) // error
   |  ^^^^^^^^^^^^^^^^^^^^^^
   |  value traverse is not a member of List[Int] - did you mean List[Int].reverse?
   |
   |  The following import might fix the problem:
   |
   |    import testObjectInstance.instances.traverseList
   |           
-- Error: tests/neg/missing-implicit1.scala:35:4 -----------------------------------------------------------------------
35 |  ff // error
   |    ^
   |    no implicit argument of type Zip[Option] was found for parameter xs of method ff
   |
   |    The following import might fix the problem:
   |
   |      import instances.zipOption
   |             
-- [E008] Member Not Found Error: tests/neg/missing-implicit1.scala:37:16 ----------------------------------------------
37 |  List(1, 2, 3).traverse(x => Option(x)) // error
   |  ^^^^^^^^^^^^^^^^^^^^^^
   |  value traverse is not a member of List[Int] - did you mean List[Int].reverse?
   |
   |  The following import might fix the problem:
   |
   |    import instances.traverseList
   |           
